--- a/index.html
+++ b/index.html
@@ -6,10 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Primary Meta Tags -->
-    <title>DJ Neill - Full-Stack Software Engineer | Web Developer for Hire</title>
-    <meta name="title" content="DJ Neill - Full-Stack Software Engineer | Web Developer for Hire" />
-    <meta name="description" content="Freelance full-stack software engineer specializing in React, TypeScript, Node.js, and .NET. Available for hire to build custom websites and web applications. Expert in modern web development." />
-    <meta name="keywords" content="software engineer, software developer, web developer, freelance developer, full-stack developer, React developer, TypeScript developer, hire software engineer, website development, custom web development, DJ Neill" />
+    <title>
+      DJ Neill - Full-Stack Software Engineer | Web Developer for Hire
+    </title>
+    <meta
+      name="title"
+      content="DJ Neill - Full-Stack Software Engineer | Web Developer for Hire"
+    />
+    <meta
+      name="description"
+      content="Freelance full-stack software engineer specializing in React, TypeScript, Node.js, and .NET. Available for hire to build custom websites and web applications. Expert in modern web development."
+    />
+    <meta
+      name="keywords"
+      content="software engineer, software developer, web developer, freelance developer, full-stack developer, React developer, TypeScript developer, hire software engineer, website development, custom web development, DJ Neill"
+    />
     <meta name="author" content="DJ Neill" />
     <meta name="robots" content="index, follow" />
     <link rel="canonical" href="https://djneill.com/" />
@@ -17,9 +28,18 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://djneill.com/" />
-    <meta property="og:title" content="DJ Neill - Full-Stack Software Engineer | Web Developer for Hire" />
-    <meta property="og:description" content="Freelance full-stack software engineer specializing in React, TypeScript, Node.js, and .NET. Available for hire to build custom websites and web applications." />
-    <meta property="og:image" content="https://djneill.com/images/openGraph.png" />
+    <meta
+      property="og:title"
+      content="DJ Neill - Full-Stack Software Engineer | Web Developer for Hire"
+    />
+    <meta
+      property="og:description"
+      content="Freelance full-stack software engineer specializing in React, TypeScript, Node.js, and .NET. Available for hire to build custom websites and web applications."
+    />
+    <meta
+      property="og:image"
+      content="https://djneill.com/public/images/openGraph.png"
+    />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:locale" content="en_US" />
@@ -28,9 +48,18 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://djneill.com/" />
-    <meta property="twitter:title" content="DJ Neill - Full-Stack Software Engineer | Web Developer for Hire" />
-    <meta property="twitter:description" content="Freelance full-stack software engineer specializing in React, TypeScript, Node.js, and .NET. Available for hire to build custom websites and web applications." />
-    <meta property="twitter:image" content="https://djneill.com/images/openGraph.png" />
+    <meta
+      property="twitter:title"
+      content="DJ Neill - Full-Stack Software Engineer | Web Developer for Hire"
+    />
+    <meta
+      property="twitter:description"
+      content="Freelance full-stack software engineer specializing in React, TypeScript, Node.js, and .NET. Available for hire to build custom websites and web applications."
+    />
+    <meta
+      property="twitter:image"
+      content="https://djneill.com/images/openGraph.png"
+    />
 
     <!-- Theme Color for Mobile Browsers -->
     <meta name="theme-color" content="#0f172a" />
@@ -38,28 +67,40 @@
 
     <!-- Structured Data (JSON-LD) -->
     <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "Person",
-      "name": "DJ Neill",
-      "url": "https://djneill.com",
-      "image": "https://djneill.com/images/conferences/headShot.webp",
-      "jobTitle": "Full-Stack Software Engineer",
-      "description": "Freelance full-stack software engineer specializing in React, TypeScript, Node.js, and .NET. Available for hire to build custom websites and web applications.",
-      "knowsAbout": ["JavaScript", "TypeScript", "React", "Node.js", ".NET", "C#", "MongoDB", "Next.js", "Tailwind CSS", "Web Development", "Software Engineering"],
-      "sameAs": [
-        "https://github.com/djneill",
-        "https://linkedin.com/in/djneill"
-      ],
-      "offers": {
-        "@type": "Offer",
-        "itemOffered": {
-          "@type": "Service",
-          "name": "Web Development Services",
-          "description": "Custom website and web application development using modern technologies"
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "DJ Neill",
+        "url": "https://djneill.com",
+        "image": "https://djneill.com/images/conferences/headShot.webp",
+        "jobTitle": "Full-Stack Software Engineer",
+        "description": "Freelance full-stack software engineer specializing in React, TypeScript, Node.js, and .NET. Available for hire to build custom websites and web applications.",
+        "knowsAbout": [
+          "JavaScript",
+          "TypeScript",
+          "React",
+          "Node.js",
+          ".NET",
+          "C#",
+          "MongoDB",
+          "Next.js",
+          "Tailwind CSS",
+          "Web Development",
+          "Software Engineering"
+        ],
+        "sameAs": [
+          "https://github.com/djneill",
+          "https://linkedin.com/in/djneill"
+        ],
+        "offers": {
+          "@type": "Offer",
+          "itemOffered": {
+            "@type": "Service",
+            "name": "Web Development Services",
+            "description": "Custom website and web application development using modern technologies"
+          }
         }
       }
-    }
     </script>
 
     <!-- Preconnect for Performance -->
