open graph image

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     />
     <meta
       property="twitter:image"
-      content="https://djneill.com/images/openGraph.png"
+      content="https://djneill.com/public/images/openGraph.png"
     />
 
     <!-- Theme Color for Mobile Browsers -->
