--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     />
     <meta
       property="og:image"
-      content="https://djneill.com/public/images/openGraph.png"
+      content="https://djneill.com/images/openGraph.png"
     />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
@@ -58,7 +58,7 @@
     />
     <meta
       property="twitter:image"
-      content="https://djneill.com/public/images/openGraph.png"
+      content="https://djneill.com/images/openGraph.png"
     />
 
     <!-- Theme Color for Mobile Browsers -->
