--- a/index.html
+++ b/index.html
@@ -46,18 +46,19 @@
     <meta property="og:site_name" content="DJ Neill Portfolio" />
 
     <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="djneill.com" />
     <meta property="twitter:url" content="https://djneill.com/" />
     <meta
-      property="twitter:title"
+      name="twitter:title"
       content="DJ Neill - Full-Stack Software Engineer | Web Developer for Hire"
     />
     <meta
-      property="twitter:description"
+      name="twitter:description"
       content="Freelance full-stack software engineer specializing in React, TypeScript, Node.js, and .NET. Available for hire to build custom websites and web applications."
     />
     <meta
-      property="twitter:image"
+      name="twitter:image"
       content="https://djneill.com/images/openGraph.png"
     />
 
